Add explaining text to the page.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
 
+
+    <p>Refresh the page to play again.</p>
+    
     <script>
 
         let options = ["Rock", "Paper", "Scissors"];
