Add alert for faulty entries.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
                 alert("My choice was Paper. You win.");
             } else if (humanChoice == "S" && computerChoice == "Scissors") {
                 alert("My choice was Scissors. We are even.");
+            } else {
+                alert("Type R, P, or S. (Please use capital letters.)")
             }
         }
 
