--- a/index.html
+++ b/index.html
@@ -4,11 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
+    <style>
+        .refresh {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 16px;
+        }
+    </style>
 </head>
 <body>
 
-
-    <p>Refresh the page to play again.</p>
+    <div class="refresh">
+        <h1>Refresh the page to play again.</h1>
+        <button onClick="window.location.reload();">Refresh Page</button>
+    </div>
 
     <script>
 
