Update UI. Add play again button. Other buttons are disabled when game is over.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     </div>
 
     <div class="game-scores">
+        <p>Reach 5 to win the game.</p>
         <div class="game-answers">
             <p class="human-score"></p>
             <p class="computer-score"></p>
